# Booky-demo

./: ..gitignore.kate-swp  .gitignore  README.md  config.py  main.py  pyproject.toml  utils.py
auth/: .aider.chat.history.md  .aider.input.history  dependencies.py  router.py  schemas.py  service.py
books/: router.py  schemas.py  service.py
infrastructure/: __init__.py  database.py  redis.py
infrastructure/models/: __init__.py  auth.py  book.py
migrations/: env.py
migrations/versions/: 368f940405fc_initial.py
